Signed-off-by: hjwg88 <85440161@qq.com>

--- a/ugs-platform/branding/src/main/nbm-branding/core/core.jar/org/netbeans/core/ui/Bundle.properties
+++ b/ugs-platform/branding/src/main/nbm-branding/core/core.jar/org/netbeans/core/ui/Bundle.properties
@@ -1,5 +1,5 @@
 LBL_Copyright=Universal G-Code Sender documentation can be found at <a href="http://winder.github.io/ugs_website/">here</a>.<br/>\
-  Bugs should be reported on github <a href="https://github.com/winder/Universal-G-Code-Sender/issues">http://github.com/winder/Universal-G-Code-Sender</a><br/><br/>\
+  Bugs should be reported on github <a href="https://github.com/hjwg88/ugs-China/issues">http://github.com/hjwg88/ugs-China</a><br/><br/>\
   <h2>Credits</h2>\
   <ul>\
     <li><b>Jogamp JOGL and Gluegen</b> for vizualisations<br/><a href="http://jogamp.org/">http://jogamp.org/</a><br/><br/></li>\
